cambios lombock